fixed linting issues

--- a/coder.ipynb
+++ b/coder.ipynb
@@ -393,6 +393,88 @@
     "\n",
     "       return responses.json"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "39281b10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mssql\n",
+      "['curated_weather_data', 'raw_weather_data']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<langchain_community.utilities.sql_database.SQLDatabase at 0x1f67508f610>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from fastapi import FastAPI, HTTPException\n",
+    "from pydantic import BaseModel\n",
+    "from typing import Optional\n",
+    "from sqlalchemy.engine import create_engine\n",
+    "from sqlalchemy.exc import OperationalError\n",
+    "from urllib.parse import quote_plus\n",
+    "from fastapi.middleware.cors import CORSMiddleware\n",
+    "from dotenv import load_dotenv\n",
+    "from datetime import datetime\n",
+    "import os\n",
+    "import re\n",
+    "from sqlalchemy import text\n",
+    "from langchain_community.agent_toolkits.sql.base import create_sql_agent\n",
+    "from langchain.agents.agent_types import AgentType\n",
+    "from langchain.sql_database import SQLDatabase\n",
+    "from langchain_community.agent_toolkits import SQLDatabaseToolkit\n",
+    "from langchain_openai import AzureChatOpenAI\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "def database_connector(connection_string, db_password, schema=\"dbo\"): \n",
+    "    try: \n",
+    "        db_engine = create_engine(connection_string % quote_plus(db_password))\n",
+    "        db = SQLDatabase(db_engine, view_support=True, schema=schema)\n",
+    "        print(db.dialect)\n",
+    "        print(db.get_usable_table_names())\n",
+    "        db.run(\"select convert(varchar(25), getdate(), 120)\")\n",
+    "        \n",
+    "        return db\n",
+    "    except OperationalError as e:\n",
+    "        print(f\"Connection to database failed. {e}\")\n",
+    "\n",
+    "database_connection_string = os.environ[\"SQL_DATABASE_CONNECTION_STRING\"]\n",
+    "database_password = os.environ[\"SQL_DATABASE_PASSWORD\"]\n",
+    "\n",
+    "database_connector(database_connection_string, database_password)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f5ea68c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.exceptions import OutputParserException  # Correct\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2cfd052",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
